--- a/parldata/cmpages/sp/bulletins/day-bb-01_bb-05-16e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-01_bb-05-16e.htm
@@ -90,7 +90,7 @@ a:hover {color: #390580}
 
             Fabiani:</strong> To ask the Scottish Executive, further to the supplementary 
 
-            answer to question S10-3376 by Rhona Brankin on 10 May 2001, what 
+            answer to question S1O-3376 by Rhona Brankin on 10 May 2001, what 
 
             evidence it has that outgoing trunk road operating companies neglected 
 
