--- a/parldata/cmpages/sp/bulletins/day-bb-01_bb-10-25a.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-01_bb-10-25a.htm
@@ -208,7 +208,7 @@
             the Race Equality Advisory Forum report, <i>Making it Real: A Race 
             Equality Strategy for Scotland.</i> (S1O-3953)</p>
           <p><strong>18. Andrew Wilson:</strong> To ask the Scottish Executive, further 
-            to the answer to question S10-3669 by Mr Alasdair Morrison on 28 June 
+            to the answer to question S1O-3669 by Mr Alasdair Morrison on 28 June 
             2001, whether there is now a target rate of growth for the Scottish 
             Economy and whether it expects the long-term trend rate of growth 
             to rise, fall or stay the same in the coming five years. (S1O-3931)</p>
