--- a/parldata/cmpages/sp/bulletins/day-bb-01_bb-12-07e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-01_bb-12-07e.htm
@@ -368,7 +368,7 @@
             on roads maintenance and (b) gross capital expenditure on the structural 
             maintenance of roads were in respect of each local authority in 2000-01.</p>
           <p><strong>S1W-20775</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answer to question S10-3907 
+            the Scottish Executive, further to the answer to question S1O-3907 
             by Mr Jack McConnell on 4 October 2001, whether (a) the deadline for 
             local authorities' bids in respect of Public/Private Partnerships 
             for improving school buildings and (b) the expected date for deciding 
