--- a/parldata/cmpages/sp/bulletins/day-bb-02_bb-01-31e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-02_bb-01-31e.htm
@@ -135,7 +135,7 @@
             To ask the Scottish Executive when it will publish the report of the 
             Chief Medical Officer's Expert Group on the Healthcare of Older People.</p>
           <p><strong>S1W-22510</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, whether the bids submitted by 
             local authorities for funding to improve school buildings require 
@@ -143,31 +143,31 @@
             such bids which only cover part of the school estate are less likely 
             to succeed in attracting funding.</p>
           <p><strong>S1W-22511</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, what criteria will be used in 
             determining how funds to improve school buildings will be allocated 
             among the competing bids. </p>
           <p><strong>S1W-22512</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, whether the bidding process 
             for funding to improve school buildings will give any incentive to 
             local authorities which are reducing the size of their school estates. 
           </p>
           <p><strong>S1W-22513</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, what the total value is of bids 
             received so far for funding to improve school buildings and what level 
             of funding is being made available in response.</p>
           <p><strong>S1W-22514</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, whether any account is taken 
             of rurality in the bidding process for funding to improve school buildings.</p>
           <p><strong>S1W-22515</strong> <strong>David Mundell:</strong> To ask 
-            the Scottish Executive, further to the answers to questions S10-3907 
+            the Scottish Executive, further to the answers to questions S1O-3907 
             and S1W-20775 by Mr Jack McConnell and Nicol Stephen on 4 October 
             2001 and 7 January 2002 respectively, whether local authorities which 
             are not successful in whole or in part in the bidding process for 
