--- a/parldata/cmpages/sp/bulletins/day-bb-02_bb-03-04e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-02_bb-03-04e.htm
@@ -85,12 +85,12 @@
             Service.</p>
           <p><strong>S1W-23632</strong> <strong>Christine Grahame:</strong> To 
             ask the Scottish Executive, further to the answer to the fourth supplementary 
-            question to question S10-4764 by Peter Peacock on 28 February 2002, 
+            question to question S1O-4764 by Peter Peacock on 28 February 2002, 
             which councils have received special borrowing consent in order to 
             allow them to eliminate budgetary deficits.</p>
           <p><strong>S1W-23633</strong> <strong>Christine Grahame:</strong> To 
             ask the Scottish Executive, further to the answer to the fourth supplementary 
-            question to question S10-4674 by Peter Peacock on 28 February 2002, 
+            question to question S1O-4674 by Peter Peacock on 28 February 2002, 
             whether it would respond favourably to an application for special 
             borrowing consent by the Scottish Borders Council if the council applied 
             part or all of its proposed reserves of £1.8 million to reducing cuts 
@@ -166,7 +166,7 @@
           <p><strong>S1W-23652</strong> <strong>Christine Grahame:</strong> To 
             ask the Scottish Executive, further to the answer to the answer to 
             question S1W-22619 by Peter Peacock on 21 February 2002 and the answer 
-            to the fourth supplementary question to question S10-4764 by Peter 
+            to the fourth supplementary question to question S1O-4764 by Peter 
             Peacock on 28 February 2002, what the difference in circumstances 
             is between the position of Western Isles Council and the current situation 
             at the Scottish Borders Council with regard to a council obtaining 
