--- a/parldata/cmpages/sp/bulletins/day-bb-02_bb-03-15e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-02_bb-03-15e.htm
@@ -128,12 +128,12 @@
             at Holyrood. </p>
           <p><strong>S1W-24140</strong> <strong>Irene McGugan:</strong> To ask 
             the Scottish Executive, further to the answer to the supplementary 
-            question from Karen Whitefield to question S10-4829 by Cathy Jamieson 
+            question from Karen Whitefield to question S1O-4829 by Cathy Jamieson 
             on 7 March 2002, whether it will outline the detail of its plans for 
             improving and upgrading social work training.</p>
           <p><strong>S1W-24141</strong> <strong>Irene McGugan:</strong> To ask 
             the Scottish Executive, further to the answer to the supplementary 
-            question from Alasdair Morgan to question S10-4829 by Cathy Jamieson 
+            question from Alasdair Morgan to question S1O-4829 by Cathy Jamieson 
             on 7 March 2002, what will form the basis of its forthcoming national 
             and local strategies to address the issue of social worker recruitment 
             and retention.</p>
