--- a/parldata/cmpages/sp/bulletins/day-bb-02_bb-09-17e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-02_bb-09-17e.htm
@@ -445,22 +445,22 @@
             following the recent closure of the Edinburgh to Glasgow railway line 
             at Falkirk.</p>
           <p><strong>S1W-29379</strong> <strong>Pauline McNeill:</strong> To ask 
-            the Scottish Executive, further to the answer to question S10-5472 
+            the Scottish Executive, further to the answer to question S1O-5472 
             by Iain Gray on 5 September 2002, what action can be taken should 
             there be a breakdown in industrial relations in the further education 
             sector.<strong><em> R</em></strong></p>
           <p> <strong>S1W-29380</strong> <strong>Pauline McNeill:</strong> To 
-            ask the Scottish Executive, further to the answer to question S10-5472 
+            ask the Scottish Executive, further to the answer to question S1O-5472 
             by Iain Gray on 5 September 2002, what appeal mechanism is available 
             to staff of further education colleges should there be a breakdown 
             in industrial relations.<strong><em> R</em></strong></p>
           <p> <strong>S1W-29381</strong> <strong>Pauline McNeill:</strong> To 
-            ask the Scottish Executive, further to the answer to question S10-5472 
+            ask the Scottish Executive, further to the answer to question S1O-5472 
             by Iain Gray on 5 September 2002, what mechanism exists to hold boards 
             of management of further education colleges to account.<strong><em> 
             R</em></strong></p>
           <p> <strong>S1W-29382</strong> <strong>Pauline McNeill:</strong> To 
-            ask the Scottish Executive, further to the answer to question S10-5472 
+            ask the Scottish Executive, further to the answer to question S1O-5472 
             by Iain Gray on 5 September 2002, whether there are any plans to review 
             the system of appointments to the boards of management of further 
             education colleges.<strong><em> R</em></strong></p>
