--- a/parldata/cmpages/sp/bulletins/day-bb-02_bb-11-04e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-02_bb-11-04e.htm
@@ -108,7 +108,7 @@ applications to the Shetland Environmentally Sensitive Area scheme made by indiv
 producers who hold binding agreements with the Scottish Executive were stopped 
 on 1 November 2002 and what the reasons are for its position on this matter.</P><P><STRONG>S1W-31201</STRONG> 
 <STRONG>Dorothy-Grace Elder:</STRONG> To ask the Scottish Executive, further to 
-the answer to question S10-5350 by Malcolm Chisholm on 20 June 2002, what Health 
+the answer to question S1O-5350 by Malcolm Chisholm on 20 June 2002, what Health 
 Technology Board for Scotland Comments on National Institute for Clinical Excellence 
 guidance will be reviewed.</P><P><STRONG>S1W-31202</STRONG> <STRONG>Mary Scanlon:</STRONG> 
 To ask the Scottish Executive what measures are in place to assess the physical 
