--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-01-06e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-01-06e.htm
@@ -95,7 +95,7 @@
             are currently waiting for an assessment for beta interferon, broken 
             down by NHS board area.</p>
           <p><strong>S1W-32826</strong> <strong>Fergus Ewing:</strong> To ask 
-            the Scottish Executive, further to the answer to question S10-2748 
+            the Scottish Executive, further to the answer to question S1O-2748 
             by Mr Tom McCabe on 11 January 2001, whether it is still its position 
             that there is no need to make representations to Her Majesty's Government 
             regarding disciplinary action against the Permanent Secretary in relation 
