--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-01-16e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-01-16e.htm
@@ -73,7 +73,7 @@ Review, the <em>Report of the Advisory Group on Youth Crime</em>, <em>Scotland&#
 Action Programme to Reduce Youth Crime 2002</em> and the Audit Scotland&#146;s 
 report, <em>Dealing with Offending and Young People.</em></P><P><STRONG>S1W-33219</STRONG> 
 <STRONG>Christine Grahame:</STRONG> To ask the Scottish Executive, further to 
-the answer to question S10-6086 by Mr Frank McAveety on 12 December 2002, what 
+the answer to question S1O-6086 by Mr Frank McAveety on 12 December 2002, what 
 consideration it has given to adopting a policy in Scotland similar to that of 
 Her Majesty&#146;s Government&#146;s of placing 700 defibrillators in 72 public 
 places in England and Wales.</P><P><STRONG>S1W-33220</STRONG> <STRONG>Mary Scanlon:</STRONG> 
