--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-03-10e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-03-10e.htm
@@ -95,7 +95,7 @@
             construct fixed-cost tender basis for the improvements on the southern 
             section of the A77.</p>
           <p><strong>S1W-34560</strong> <strong>Phil Gallie:</strong> To ask the 
-            Scottish Executive, further to the answer to question S10-06561 by 
+            Scottish Executive, further to the answer to question S1O-06561 by 
             Iain Gray on 6 March 2003, why it could not proceed on a design and 
             construct fixed-cost, fixed-time, tender basis for the improvements 
             on the southern section of the A77 and what experience it has of using 
