--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-03-12e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-03-12e.htm
@@ -138,7 +138,7 @@
             occurred in (a) 1999, (b) 2000, (c) 2001 and (d) 2002.</p>
           <p><strong>S1W-34607</strong> <strong>David Mundell:</strong> To ask 
             the Scottish Executive<a name="QuestionText">, further to the answer 
-            to question S10-6183 by Lewis Macdonald on 9 January 2003, what information 
+            to question S1O-6183 by Lewis Macdonald on 9 January 2003, what information 
             it has received about whether the interim analysis of the consultation 
             responses to <em>The Future Development of Air Transport in the United 
             Kingdom</em> has now been completed and, if it has been completed, 
