--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-06-11e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-06-11e.htm
@@ -194,7 +194,7 @@
             the dental profession in Grampian prior to any establishment of a 
             more permanent facility.</p>
           <p><strong>S2W-729</strong> <strong>Christine Grahame:</strong> To ask 
-            the Scottish Executive, further to the answer to question S10-3985 
+            the Scottish Executive, further to the answer to question S1O-3985 
             by Malcolm Chisholm on 1 November 2001 and the announcement by the 
             Minister for Health and Community Care on 30 January 2003 in response 
             to the Audit Scotland report, <em>Hospital cleaning</em>, what progress 
