--- a/parldata/cmpages/sp/bulletins/day-bb-03_bb-11-07e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-03_bb-11-07e.htm
@@ -283,7 +283,7 @@
             on 9 June 2003, whether it is aware of any person who has sold their 
             property in order to fund their care in a local authority care home.</p>
           <p><strong>S2W-3951</strong> <strong>Phil Gallie:</strong> To ask the 
-            Scottish Executive, further to the answer to question S20-673 by Margaret 
+            Scottish Executive, further to the answer to question S2O-673 by Margaret 
             Curran on 6 November 2003, how many sites were provided by local authorities 
             for gypsies and travelling people in (a) 1980, (b) 1985, (c) 1990 
             and (d) 2000.</p>
