--- a/parldata/cmpages/sp/bulletins/day-bb-04_bb-05-17e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-04_bb-05-17e.htm
@@ -208,19 +208,19 @@
             whether any discussions have taken place between it and South Lanarkshire 
             Council on the issue, especially relating to East Kilbride.</P>
           <p><strong>S2W-8262</strong> <strong>Linda Fabiani:</strong> To ask 
-            the Scottish Executive, further to the answer to question S20-665 
+            the Scottish Executive, further to the answer to question S2O-665 
             by Mr Tom McCabe on 30 October 2003, whether GP prescribing of portable 
             oxygen has ensured that an effective means of supply and distribution 
             is in place to meet the needs of all patients in Scotland who can 
             benefit.</P>
           <p><strong>S2W-8263</strong> <strong>Linda Fabiani:</strong> To ask 
-            the Scottish Executive, further to the answer to question S20-665 
+            the Scottish Executive, further to the answer to question S2O-665 
             by Mr Tom McCabe 30 October 2003, whether the study to consider the 
             possible benefit to patients of alternative methods of supply and 
             distribution of portable oxygen is complete and, if so, what the results 
             of the study were.</P>
           <p><strong>S2W-8264</strong> <strong>Linda Fabiani:</strong> To ask 
-            the Scottish Executive, further to the answer to question S20-665 
+            the Scottish Executive, further to the answer to question S2O-665 
             by Mr Tom McCabe on 30 October 2003, whether a decision has been taken 
             regarding the possible benefits of making conservation devices available 
             on the NHS.</P>
