--- a/parldata/cmpages/sp/bulletins/day-bb-05_bb-06-16d.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-05_bb-06-16d.htm
@@ -119,7 +119,7 @@
           <p align="center"><strong> General</strong></p>
           <p><strong> 1. Margaret Smith:</strong> To ask the Scottish Executive how the police are addressing homophobic bullying in the workplace and in schools. (S2O-7206)</p>
           <p><strong> 2. George Lyon:</strong> To ask the Scottish Executive what support it is providing to ensure that path networks are adequately developed and maintained. (S2O-7200)</p>
-          <p><strong> 3. Jim Mather:</strong> To ask the Scottish Executive whether it is satisfied with the accuracy of data provided to IMD of Switzerland, the authors of the <em>World Competitiveness Yearbook, </em>and how it will ensure that the provision of this data does not adversely affect the economy. S2O-7223)</p>
+          <p><strong> 3. Jim Mather:</strong> To ask the Scottish Executive whether it is satisfied with the accuracy of data provided to IMD of Switzerland, the authors of the <em>World Competitiveness Yearbook, </em>and how it will ensure that the provision of this data does not adversely affect the economy. (S2O-7223)</p>
           <p><strong> 4. Roseanna Cunningham:</strong> To ask the Scottish Executive what steps are being taken to ensure that cancer treatment targets can be met. (S2O-7211)</p>
           <p><strong> 5. Mr Jamie McGrigor:</strong> To ask the Scottish Executive what action it is taking to ensure access to dental provision for those living in the Highlands and Islands. (S2O-7193)</p>
           <p><strong> 6. Christine Grahame:</strong> To ask the Scottish Executive whether it is now satisfied with the operation of Disclosure Scotland. (S2O-7216)</p>
