--- a/parldata/cmpages/sp/bulletins/day-bb-01_bb-11-01e.htm
+++ b/parldata/cmpages/sp/bulletins/day-bb-01_bb-11-01e.htm
@@ -262,7 +262,7 @@
             available to the public concerning the increased risk of melanoma 
             associated with the use of artificial sun tanning apparatus.</p>
           <p><strong>S1W-19579</strong> <strong>Ms Sandra White:</strong> To ask the 
-            Scottish Executive, further to the answer to question S10-3930 by 
+            Scottish Executive, further to the answer to question S1O-3930 by 
             Susan Deacon on 25 October 2001, what guidance it issues to the public 
             concerning the increased risk of melanoma associated with the use 
             of artificial sun tanning apparatus.</p>
